force-app/main/default/objects/nFORCE__Option_Rule__c/fields/nFORCE__Condition__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Condition__c</fullName>
    <description>This field is optional. It is set when the admin adds a rule to a question in the Questionnaire Admin. It describes when a rule is applied.</description>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equal to</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>