force-app/main/default/objects/nFORCE__Option_Rule__c/fields/nFORCE__Conditional_Question__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Conditional_Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required. It is manually populated. This field is used to set which question to render when the option matches.</description>
    <label>Conditional_Question</label>
    <referenceTo>nFORCE__Question__c</referenceTo>
    <relationshipLabel>Option Rules (Conditional_Question)</relationshipLabel>
    <relationshipName>Conditional_Question</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>