force-app/main/default/objects/nFORCE__Option_Rule__c/fields/nFORCE__Option__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Option__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required. It is manually populated. This field looks up to the option. It is tested against the nForce__Condition__c to determine whether to display the linked conditional question.</description>
    <label>Option</label>
    <referenceTo>nFORCE__Option__c</referenceTo>
    <relationshipLabel>Option Rules</relationshipLabel>
    <relationshipName>Option_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>