force-app/main/default/objects/nFORCE__Option_Rule__c/fields/nFORCE__Question__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required. It is manually populated. This field looks up to a question, whose answer is used to determine whether to display a conditional rule.</description>
    <label>Question</label>
    <referenceTo>nFORCE__Question__c</referenceTo>
    <relationshipLabel>Option Rules</relationshipLabel>
    <relationshipName>Option_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>